--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>India Coronavirus Info Live</title>
+    <title>{{ countryname }} Coronavirus Info Live</title>
     <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.min.css">
     <style> .card{text-align: center;} </style>
 </head>
